Exercise Solution Uploaded

--- a/Week4/Example 4.1/index.html
+++ b/Week4/Example 4.1/index.html
@@ -5,7 +5,7 @@
     <title>Example 4.1</title>
 </head>
 <body>
-<h1>H is short for heading, and the largest heading is H1</h1>
+<h1>Anubhav's first try</h1><br><br><br>
 <h2> H2,3,4... are the smaller ranks of heading</h2>
 <p>P is short for paragraph</p>
 <p>Almost all the html tags can be used cascaded.
