--- a/Week4/Example 4.2/index.html
+++ b/Week4/Example 4.2/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Example 4.2, Table</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
+    <div id = "body"> 
 <h1>
     Tables
 </h1>
@@ -43,11 +45,11 @@
         </td>
         <td> Cell 2
         </td>
-        <td> Cell 3
+        <td> Anubhav's change
         </td>
     <tr>
     </tbody>
 </table>
-
+</div>
 </body>
 </html>
