--- a/Week6/Exercise/index.html
+++ b/Week6/Exercise/index.html
@@ -7,8 +7,131 @@
 
 </head>
 <body>
-<div style="width: 80%"></div>
+<div 
+id="container" style="width: 100%">  </div>
+
+
 <script>
+// let svg = d3.select('svg#main')
+//     let X = d3.range(0,1000,100)
+//     let dataSet = d3.map(X,function (d){
+//         return {x:d,y:d}
+//     })
+
+//     let line = d3.line()
+//         .x(function(d) { return d.x; })
+//         .y(function(d) { return d.y; });
+//     svg.append("path")
+//         .data([dataSet])
+//         .attr("d",line)
+//         .attr("fill",'none')
+//         .style("stroke","green")
+//         .style("stroke-width","5px")
+
+// let x=d3.csv("./data_sample.csv") .then(function(data) {
+//     console.log(data);
+//     return data;
+//     // console.log(x)
+// });
+
+// d3.csv("./data_sample.csv").then(function(data) {
+//     for (i=0;i<20;i++){
+//     console.log(data[i].EstimatedCost);
+//     }
+//     // console.log(x)
+// });
+
+let svg = d3.selectAll('#container')
+        .append('svg')
+        .attr('width','100%')
+        .attr('height','100vw')
+        .attr('viewBox','0 0 1000 800')
+    .style('background-color','#f5f3f3');
+    let margins = 40;
+    let width = 500 - 2 * margins;
+    let height = 400 - 2 * margins;
+
+
+const loadData = d3.csv("./data_sample.csv").then(d => {
+        let data = d.map(element => {
+            console.log(d)
+            return {
+                date: new Date(element.date),
+                estimated_cost: Number(element.EstimatedCost),
+                raw_material: Number(element.RawMaterial),
+                workmanship: Number(element.Workmanship),
+                yearly_storage: Number(element.YearlyStorage)
+            }
+        })
+        return data
+    });
+
+loadData.then(data => {
+
+//step 4: define scale functions for x and y axis
+//Plot for date vs yearly_storage and date vs estimated_cost
+let x = d3.scaleTime()
+    .domain(d3.extent(data, function(d) { return d.date; }))
+    .range([margins, width]);
+let y1 = d3.scaleLinear()
+    .domain([0, d3.max(data, function(d) { return d.yearly_storage; })])
+    .range([height, margins]);
+
+ let y2 = d3.scaleLinear()
+     .domain([0, d3.max(data, function(d) { return d.estimated_cost; })])
+     .range([height, margins]);
+
+// let y3 = d3.scaleLinear()
+//     .domain([0, d3.max(data, function(d) { return d.workmanship; })])
+//     .range([height, margins]);
+
+//step 5: define line function for [date] and [close] variable
+let Line1= d3.line()
+    .x(function(d) { return x(d.date); })
+    .y(function(d) { return y1(d.yearly_storage); });
+
+let Line2 = d3.line()
+    .x(function(d) { return x(d.date); })
+    .y(function(d) { return y2(d.estimated_cost); });
+
+let Line3 = d3.line()
+    .x(function(d) { return x(d.date); })
+    .y(function(d) { return y3(d.workmanship); });
+//step 6: append a path elements
+
+svg.append("path")
+    .data([data])
+    .attr("class", "line")
+    .attr("d", Line1) // line function automatically makes d attribute
+    .attr("stroke-linejoin",'round')
+    .attr("stroke-linecap",'round')
+    .attr("fill",'none')
+    .attr("stroke","black")
+    .attr("stroke-width","2px")
+
+svg.append("path")
+    .data([data])
+    .attr("class", "line")
+    .attr("d", Line2) // line function automatically makes d attribute
+    .attr("stroke-linejoin",'round')
+    .attr("stroke-linecap",'round')
+    .attr("fill",'none')
+    .attr("stroke","green")
+    .attr("stroke-width","2px")
+
+svg.append("g")
+.attr("transform","translate("+'0'+"," + height + ")")
+.call(d3.axisBottom(x));
+
+svg.append("g")
+.attr("transform","translate("+ margins+"," + "0" + ")")
+.call(d3.axisLeft(y1));
+
+svg.append("g")
+.attr("transform","translate("+ margins+"," + "0" + ")")
+.call(d3.axisLeft(y2));
+
+});
 
 </script>
 </body>
