--- a/Week6/Wednesday 6th October Class Activity/Class Activity/index_1980.html
+++ b/Week6/Wednesday 6th October Class Activity/Class Activity/index_1980.html
@@ -107,7 +107,7 @@
                 // if the data is scaled using log scale
             let logScale = d3.scaleLog()
                 .domain(d3.extent(geojson.features, (d) => {
-                    return d['properties']['POP1980']
+                    return d['properties']['POPCH80_90']
                 }))
 
             // if the data is scaled using linear scale
@@ -136,7 +136,7 @@
                 .append("path")
                 .attr("d", d => geoPath_generator(d))
                 //.attr("fill", d => colorInterpolator(logScale(d['properties']['POP2010'])))
-                .attr("fill", d => colorInterpolator(linearScale(d['properties']['POPCH80_90','POPCH90_00','POPCH00_10'])))
+                .attr("fill", d => colorInterpolator(linearScale(d['properties']['POPCH80_90'])))
                 .on("mouseenter", (m, d) => {
                     tooltip.transition()
                         .duration(200)
