--- a/Week 10 Class Activity/Multiview part 2/Exercise/index.html
+++ b/Week 10 Class Activity/Multiview part 2/Exercise/index.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="../styles/style.css" />
 
+<!-- D3 Brush reference -> https://www.d3-graph-gallery.com/graph/interactivity_brush.html -->
+
     <!-- Toogle button -->
     
     <!-- <link rel = "stylesheet" href = "C:/Users/anubh/Desktop/Course Requisites/Fall 2021/DSC 530/DSC568/Week 10 Class Activity/Multiview part 2/Exercise/bootstrap-toggle-master/bootstrap-toggle-master/css/bootstrap-toggle.css"/>
@@ -181,6 +183,14 @@ display: none;
         .attr("class", "fig")
         .attr("width", "100%")
         .attr("height", "100%");
+
+
+        // Add brushing
+d3.select("#main2")
+      .call( d3.brush()                 // Add the brush feature using the d3.brush function
+        .extent( [ [0,0], [700,700] ] ) // initialise the brush area: start at 0,0 and finishes at width,height: it means I select the whole graph area
+       
+      )
 
       // top svg 2
       let svg_top2 = d3
